Fixing the header on smaller screens

--- a/src/pages/main/Main.page.css
+++ b/src/pages/main/Main.page.css
@@ -6,7 +6,7 @@
   bottom: 0;
   display: grid;
   grid-template-rows: 10vh 90vh;
-  grid-template-columns: 15vw 85vw;
+  grid-template-columns: 280px 100%;
 }
 .main-structure header {
   background: var(--palette-color-1-dark) !important;
@@ -24,6 +24,7 @@
   grid-row: 2;
   display: flex;
   flex-direction: column;
+  min-width: 280px;
 }
 .main-structure article {
   background-color: var(--palette-color-light) !important;
@@ -48,16 +49,29 @@
   align-items: center;
   border-radius: 0.5rem;
 }
+
+
 .main-structure header span label {
   color: var(--palette-color-light) !important;
-  font-size: 1rem;
+  font-size: calc(1vh);
+  min-height: 1vh;
   margin-top: 0.5rem;
   cursor: pointer;
 }
+
 .main-structure header span svg {
   width: 80%;
   aspect-ratio: 1/1;
   position: relative;
+}
+
+@media screen and (max-width: 1920px) {
+  .main-structure header span label {
+      display: none !important;
+  }
+  .main-structure header span svg {
+    width: 100%;
+  }
 }
 
 .main-structure header span::after {
